--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,5 +33,6 @@ clap = "4.0.29"
 bitcoincash-addr = "0.5.2"
 rand = "0.8.5"
 merkle-cbt = "0.3.2"
-anyhow = "1.0.94"
+hex = "0.4.3"
+base64 = "0.22.1"
 
